stress/service.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stress
  annotations:
    fluentbit.io/parser: nginx
spec:
  replicas: 6
  selector:
    matchLabels:
      app: stress
  template:
    metadata:
      labels:
        app: stress
      annotations:
        fluentbit.io/parser: nginx
    spec:
      containers:
      - name: stress
        image: punkerside/hardware-stress
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: stress
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: stress
